--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-stage-1": "^6.16.0",
     "css-loader": "^0.25.0",
     "flexboxgrid": "^6.3.1",
+    "jquery": "^3.1.1",
     "material-ui": "^0.15.4",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
