--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1"
+  },
+  "dependencies": {
+    "flexboxgrid": "^6.3.1"
   }
 }
