--- a/package.json
+++ b/package.json
@@ -11,24 +11,22 @@
   "author": "Nischay Goyal",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.16.0",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-1": "^6.16.0",
-    "css-loader": "^0.25.0",
-    "flexboxgrid": "^6.3.1",
-    "jquery": "^3.1.1",
-    "material-ui": "^0.15.4",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-router": "^2.8.1",
-    "react-tap-event-plugin": "^1.0.0",
+    "css-loader": "^0.26.1",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.1"
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
-    "flexboxgrid": "^6.3.1"
+    "flexboxgrid": "^6.3.1",
+    "material-ui": "^0.16.6",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-router": "^3.0.0",
+    "react-tap-event-plugin": "^2.0.1"
   }
 }
