--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --content-base public --hot --inline",
     "build": "webpack",
+    "express": "node ./server/bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nischay Goyal",
@@ -22,6 +23,7 @@
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
+    "express": "^4.14.0",
     "flexboxgrid": "^6.3.1",
     "material-ui": "^0.16.6",
     "react": "^15.4.1",
